--- a/Coding/Homework2_Project_Exploratory_Analysis_Wendy_Wong.ipynb
+++ b/Coding/Homework2_Project_Exploratory_Analysis_Wendy_Wong.ipynb
@@ -5600,7 +5600,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
